# SlicerSupervisedSegmentation

./: .gitignore  CMakeLists.txt  README.md
SegmentationToolbox/: CMakeLists.txt  README.txt
SegmentationToolbox/SegmentationToolboxModule/: CMakeLists.txt  qSlicerSegmentationToolboxModuleModule.cxx  qSlicerSegmentationToolboxModuleModule.h  qSlicerSegmentationToolboxModuleModuleWidget.cxx  qSlicerSegmentationToolboxModuleModuleWidget.h
SegmentationToolbox/SegmentationToolboxModule/Classifying/: ClassificationResultCombinator.cpp  ClassificationResultCombinator.h  ClassifierDlibSvmC.cpp  ClassifierDlibSvmC.h  ClassifierDlibSvmNu.cpp  ClassifierDlibSvmNu.h  ClassifierList.cpp  ClassifierList.h  ClassifierSharkRandomForest.cpp  ClassifierSharkRandomForest.h  ClassifierSharkSvmC.cpp  ClassifierSharkSvmC.h  SupervisedClassifier.cpp  SupervisedClassifier.h
SegmentationToolbox/SegmentationToolboxModule/Logic/: vtkSlicerSegmentationToolboxModuleLogic.h
SegmentationToolbox/SegmentationToolboxModule/Preprocessing/: ImageRangePreprocessingSelector.cpp  ImageRangePreprocessingSelector.h  PreprocessingAlgorithm.cpp  PreprocessingAlgorithm.h  PreprocessingAlgorithmList.cpp  PreprocessingAlgorithmList.h  PreprocessingGaussFilter.cpp  PreprocessingGaussFilter.h  PreprocessingMedian3d.cpp  PreprocessingMedian3d.h  PreprocessingSobelOperator.cpp  PreprocessingSobelOperator.h
SegmentationToolbox/SegmentationToolboxModule/Resources/UI/: SegmentationToolboxClassifyingWidget.ui  SegmentationToolboxTrainingWidget.ui  qSlicerSegmentationToolboxModuleModuleWidget.ui
SegmentationToolbox/SegmentationToolboxModule/Resources/UI/Classifiers/: ClassifierDlibSvmCClassify.ui  ClassifierDlibSvmCTrain.ui  ClassifierDlibSvmNuClassify.ui  ClassifierDlibSvmNuTrain.ui  ClassifierSharkRandomForestClassify.ui  ClassifierSharkRandomForestTrain.ui  ClassifierSharkSvmCClassify.ui  ClassifierSharkSvmCTrain.ui
SegmentationToolbox/SegmentationToolboxModule/Widgets/: CMakeLists.txt  ClassifierWidget.cpp  ClassifierWidget.h  SegmentationToolboxClassifyingWidget.cpp  SegmentationToolboxClassifyingWidget.h  SegmentationToolboxTrainingWidget.cpp  SegmentationToolboxTrainingWidget.h  VolumeManager.cpp  VolumeManager.h  VolumeSelectorDialog.h
SegmentationToolboxModule/: CMakeLists.txt  qSlicerSegmentationToolboxModuleModule.cxx  qSlicerSegmentationToolboxModuleModule.h  qSlicerSegmentationToolboxModuleModuleWidget.cxx  qSlicerSegmentationToolboxModuleModuleWidget.h
SegmentationToolboxModule/Classifying/: ClassificationResultCombinator.h  ClassifierDlibSvmC.cpp  ClassifierDlibSvmC.h  ClassifierDlibSvmNu.cpp  ClassifierDlibSvmNu.h  ClassifierList.cpp  ClassifierSharkRandomForest.cpp  ClassifierSharkRandomForest.h  ClassifierSharkSvmC.cpp  ClassifierSharkSvmC.h  SupervisedClassifier.cpp  SupervisedClassifier.h  SupervisedClassifierWorker.cpp  SupervisedClassifierWorker.h
SegmentationToolboxModule/Logic/: vtkSlicerSegmentationToolboxModuleLogic.cxx
SegmentationToolboxModule/Preprocessing/: ImageRangePreprocessingSelector.cpp  PreprocessingAlgorithm.h  PreprocessingAlgorithmList.cpp  PreprocessingAlgorithmList.h  PreprocessingMedian3d.cpp  PreprocessingMedian3d.h  PreprocessingSobelOperator.cpp  PreprocessingSobelOperator.h
SegmentationToolboxModule/Resources/UI/: SegmentationToolboxClassifyingWidget.ui  SegmentationToolboxTrainingWidget.ui  qSlicerSegmentationToolboxModuleModuleWidget.ui
SegmentationToolboxModule/Resources/UI/Classifiers/: ClassifierDlibSvmCClassify.ui  ClassifierDlibSvmCTrain.ui  ClassifierDlibSvmNuTrain.ui  ClassifierSharkSvmCTrain.ui
SegmentationToolboxModule/Widgets/: CMakeLists.txt  SegmentationToolboxClassifyingWidget.h  SegmentationToolboxTrainingWidget.cpp  SegmentationToolboxTrainingWidget.h  VolumeManager.cpp  VolumeSelectorDialog.cpp
SupervisedSegmentationToolboxMain/: CMakeLists.txt  qSlicerSupervisedSegmentationToolboxMainModule.cxx  qSlicerSupervisedSegmentationToolboxMainModule.h  qSlicerSupervisedSegmentationToolboxMainModuleWidget.cxx  qSlicerSupervisedSegmentationToolboxMainModuleWidget.h
SupervisedSegmentationToolboxMain/Classifying/: ClassificationResultCombinator.cpp  ClassifierDlibSvmC.cpp  ClassifierDlibSvmC.h  ClassifierList.cpp  ClassifierList.h  ClassifierSharkSvmC.cpp  SupervisedClassifierWorker.cpp
SupervisedSegmentationToolboxMain/Logic/: vtkSlicerSupervisedSegmentationToolboxMainLogic.cxx  vtkSlicerSupervisedSegmentationToolboxMainLogic.h
SupervisedSegmentationToolboxMain/Preprocessing/: ImageRangePreprocessingSelector.h  PreprocessingAlgorithm.cpp  PreprocessingGaussFilter.cpp  PreprocessingGaussFilter.h
SupervisedSegmentationToolboxMain/Resources/: qSlicerSupervisedSegmentationToolboxMainModule.qrc
SupervisedSegmentationToolboxMain/Resources/UI/: qSlicerSupervisedSegmentationToolboxMainModuleWidget.ui
SupervisedSegmentationToolboxMain/Resources/UI/Classifiers/: ClassifierDlibSvmNuClassify.ui  ClassifierSharkRandomForestClassify.ui  ClassifierSharkRandomForestTrain.ui  ClassifierSharkSvmCClassify.ui
SupervisedSegmentationToolboxMain/Widgets/: CMakeLists.txt  SegmentationToolboxClassifyingWidget.cpp  SegmentationToolboxClassifyingWidget.h  SegmentationToolboxTrainingWidget.cpp  SegmentationToolboxTrainingWidget.h  VolumeManager.cpp  VolumeManager.h
